--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node app.js"
   },
+  "engines" : { "node" : ">=13.7.0" },
   "dependencies": {
     "commander": "^4.1.1",
     "cookie-parser": "~1.4.4",
